# app/Http/Controllers/PostController.php
@@ -12,13 +12,13 @@ class PostController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-                /**
- * @OA\Get(
- *     path="/api/posts",
- *     description="get all posts",
- *     @OA\Response(response="default", description="get all posts")
- * )
- */
+    /**
+     * @OA\Get(
+     *     path="/api/posts",
+     *     description="get all posts",
+     *     @OA\Response(response="default", description="get all posts")
+     * )
+     */
     public function index()
     {
         return response(['data' => Post::all()], 200);
@@ -40,13 +40,13 @@ class PostController extends Controller
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
-                    /**
- * @OA\Post(
- *     path="/api/create-post/{id}",
- *     description="create posts",
- *     @OA\Response(response="default", description="create posts")
- * )
- */
+    /**
+     * @OA\Post(
+     *     path="/api/create-post/{id}",
+     *     description="create posts",
+     *     @OA\Response(response="default", description="create posts")
+     * )
+     */
     public function store(Request $request)
     {
         $request->validate([
@@ -65,6 +65,13 @@ class PostController extends Controller
      *
      * @param  \App\Models\Post  $post
      * @return \Illuminate\Http\Response
+     */
+    /**
+     * @OA\Get(
+     *     path="/api/view-post/{id}",
+     *     description="view posts",
+     *     @OA\Response(response="default", description="view posts")
+     * )
      */
     public function show($id)
     {
@@ -91,13 +98,13 @@ class PostController extends Controller
      * @param  \App\Models\Post  $post
      * @return \Illuminate\Http\Response
      */
-                        /**
- * @OA\Post(
- *     path="/api/update-post/{id}",
- *     description="create posts",
- *     @OA\Response(response="default", description="create posts")
- * )
- */
+    /**
+     * @OA\Post(
+     *     path="/api/update-post/{id}",
+     *     description="create posts",
+     *     @OA\Response(response="default", description="create posts")
+     * )
+     */
     public function update(Request $request, $id)
     {
         $request->validate([
@@ -119,12 +126,12 @@ class PostController extends Controller
      * @return \Illuminate\Http\Response
      */
     /**
- * @OA\Post(
- *     path="/api/delete-post/{id}",
- *     description="delete posts",
- *     @OA\Response(response="default", description="delete posts")
- * )
- */
+     * @OA\Post(
+     *     path="/api/delete-post/{id}",
+     *     description="delete posts",
+     *     @OA\Response(response="default", description="delete posts")
+     * )
+     */
     public function destroy($id)
     {
         $post = Post::findOrFail($id);
